--- a/css/style.css
+++ b/css/style.css
@@ -4,21 +4,37 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2em;
     width: 800px;
-    margin: 0 auto;
+    margin: 1rem auto;
+    padding: 1rem;
+    background: #ffffff;
 }
 
 label {
     display: inline-block;
     width: 240px;
+    padding: .3rem;
+    background: #0069D9;
+    color: #ffffff;
+    border-radius: 5px;
+    text-align: center;
 }
 
 .group {
     margin: 20px 0 20px 0;
 }
 
-input[type=submit] {
+h1, h4 {
+    font-family: 'Times New Roman', Times, serif;
+    background: #0069D9;
+    color: #ffffff;
+    padding: .8rem;
+    border-radius: 10px;
+    text-align: center;
+}
+
+/* input[type=submit] {
     background: #336699;
     color: #fff;
     padding: 10px;
     font-size: 1em;
-}
+} */
