--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ label {
     margin: 20px 0 20px 0;
 }
 
-h1, h4 {
+.h3 {
     font-family: 'Times New Roman', Times, serif;
     background: #0069D9;
     color: #ffffff;
@@ -31,10 +31,3 @@ h1, h4 {
     border-radius: 10px;
     text-align: center;
 }
-
-/* input[type=submit] {
-    background: #336699;
-    color: #fff;
-    padding: 10px;
-    font-size: 1em;
-} */
